--- a/ai/style.css
+++ b/ai/style.css
@@ -547,8 +547,8 @@ width: 188.99px;
 .links-panel__link {
   color: white;
   text-decoration: none;
-  font-size: 48px;
-  font-weight: 800;
+  font-size: 80px;
+  font-weight: 900;
   display: block;
 }
 
@@ -697,6 +697,8 @@ width: 188.99px;
 
   .links-panel__logo {
     max-width: 20%;
+    margin-left: auto;
+    margin-right: 300px;
   }
 
   .footer {
